added some file and the menu is missing

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 <body>
 	<header>
+
 		<div class="logo">
-			<img src="fondo-globo-programacion.jpg"style="width:20%;height:2%;" alt="Logo">
+			<img src="img/fondo-globo-programacion.jpg" alt="">
 		</div>
-		<button class="nav_toggle" aria-label="toggle navigation">
-			<span class="hamburger">Boton</span>
+
+		<button class="nav__toggle" aria-label='toggle navigation'>
+			<span class="hamburger"></span>
 		</button>
+
 		<nav class="nav">
 			<ul class="nav__list">
 				<i class="nav__item"><a href="#house" class="nav__link">Home</a></i>
 				<i class="nav__item"><a href="#services" class="nav__link">My Services</a></i>
 				<i class="nav__item"><a href="#about" class="nav__link">About Me</a></i>
-				<i class="nav__item"><a href="" class="nav__link">My Work</a></i>
+				<i class="nav__item"><a href="#work" class="nav__link">My Work</a></i>
 
 			</ul>
 		</nav>
@@ -99,45 +102,61 @@
 	<!--My Word--->
 	<section class="my__work" id="work">
 		<h2 class="section__title">My Work</h2>
-		<p class="section__subtitle"></p>
+		<p class="section__subtitle">A selection of my range  work</p>
 
 		<div class="portfolio">
-			<a href="a" class="portfolio__item">
-				<img src="img/cpp.jpg" alt="portfolio" class="portfolio__image">
+			<a href="#" class="portfolio__item">
+				<img src="img/cpp.jpg" alt="portfolio" class="portfolio__image"style="width:300px;height:200px;">
+			</a>
+			<a href="#" class="portfolio__item">
+				<img src="img/csharp.jpg" alt="portfolio" class="portfolio__image"style="width:300px;height:200px;">
+			</a>
+			<a href="#" class="portfolio__item">
+				<img src="img/java.jpg" alt="portfolio" class="portfolio__image"style="width:300px;height:200px;">
 			</a>
 			<a href="a" class="portfolio__item">
-				<img src="img/csharp.jpg" alt="portfolio" class="portfolio__image">
+				<img src="img/lenguaje c code.png" alt="portfolio" class="portfolio__image"style="width:300px;height:200px;">
 			</a>
 			<a href="a" class="portfolio__item">
-				<img src="img/java.jpg" alt="portfolio" class="portfolio__image">
+				<img src="img/python.jpg" alt="portfolio" class="portfolio__image" style="width:300px;height:200px;">
 			</a>
 			<a href="a" class="portfolio__item">
-				<img src="img/lenguaje c code.png" alt="portfolio" class="portfolio__image">
+				<img src="img/javascript.jpg"alt="portfolio"class="portfolio__image" style="width:300px;height:200px;">
 			</a>
-			<a href="a" class="portfolio__item">
-				<img src="img/python.jpg" alt="portfolio" class="portfolio__image">
+			<a href=""class="portfolio__item"style="width:300px;height:200px;"> 
+				<img src="img/design.jpg"class="portfolio__image"style="width:300px;height:200px;">
 			</a>
-			<a href="a" class="portfolio__item">
-				<img src="img/javascript.jpg" alt="portfolio" class="portfolio__image">
+			<a href=""class="portfolio__item"> 
+				<img src="img/php.png"class="portfolio__image"style="width:300px;height:200px;">
 			</a>
+			<a href="" class="portfolio__item"> 
+				<img src="img/angular.png"class="portfolio__image"style="width:400px;height:200px;">
+			</a>
+			
 		</div>
 	</section>
 	<!--Footer-->
-	<footer>
-		<a href="https://www.google.com" class="footer__link">ejcruz.com</a>
-		<ul class="socila__list">
+	<footer class="footer">
+		<a href="https://www.google.com" class="footer__link" target="_blank">ej@gmail.com</a>
+		<ul class="social__list">
 			<li class="social__list-item">
 				<a href="https://www.facebook.com/skollbig/" 
-				class="social__list-link"><i class="fab fa-facebook"></i>Facebook</a>
+				class="social__list-link" target="_blank"><i class="fab fa-facebook"></i></a>
 			</li>
 			<li class="social__list-item">
+				<a href="https://github.com/CruzJavier13" 
+				class="social__list-link" target="_blank"><i class="fab fa-github"></i></a>
+			</li>
+			
+			<li class="social__list-item">
 				<a href="https://twitter.com/erickjaviercruz" 
-				class="social__list-link"><i class="fab fa-twitter"></i>Twitter</a>
+				class="social__list-link" target="_blank"><i class="fab fa-twitter"></i></a>
 			</li><i class=""></i>
 			<li class="social__list-item">
-				<a href="https://www.instagram.com/cruzerickjavier/?hl=es" class="social__list-link" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+				<a href="https://www.instagram.com/cruzerickjavier/?hl=es" class="social__list-link" target="_blank"><i class="fab fa-instagram"></i></a>
 			</li>
 		</ul>
 	</footer>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
